<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.frank.androidjavamap.ScrollingActivity1">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageArts2"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:background="@drawable/arts7"
                android:transitionName="@string/artstransition"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="8dp" />
            <ImageView
                android:id="@+id/artsdescribe"
                android:background="@drawable/artsdescribe1"
                android:layout_width="match_parent"
                android:layout_height="200dp"/>
            <ImageButton
                android:id="@+id/btnartscience"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:transitionName="@string/artsciencetransition"
                android:background="@drawable/artscience1"/>
            <ImageButton
                android:id="@+id/btnreddot"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:transitionName="@string/reddottransition"
                android:background="@drawable/reddot1"/>
            <ImageButton
                android:id="@+id/btnsam"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:transitionName="@string/samtransition"
                android:background="@drawable/sam1"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
