<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.frank.androidjavamap.ScrollingActivity2">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/imageCulture2"
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:background="@drawable/culture6"
                android:transitionName="@string/culturetransition"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="8dp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/culturedescribe" />

            <ImageButton
                android:id="@+id/btnbuddha"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:transitionName="@string/buddhatransition"
                android:onClick="tobuddha"
                android:background="@drawable/buddha1"/>


            <ImageButton
                android:id="@+id/btnperanakan"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:transitionName="@string/peranakantransition"
                android:onClick="toperanakan"
                android:background="@drawable/peranakan1"/>

            <ImageButton
                android:id="@+id/btnancient"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:transitionName="@string/ancienttransition"
                android:onClick="toancient"
                android:background="@drawable/ancient1"/>

        </LinearLayout>
    </ScrollView>


</LinearLayout>
