<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.frank.androidjavamap.Solver"
    android:background="@color/colorPrimaryDark">
    <Button
        android:id="@+id/btnItinerary"
        android:background="@color/colorPrimary"
        android:text="@string/viewitinerary"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/budget"
            android:textSize="20sp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:textColor="@android:color/white"/>
        <EditText
            android:id="@+id/etBudget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_budget"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_toRightOf="@+id/tBudget"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/btnFastsolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="FastSolver"
            android:layout_below="@id/etBudget"
            android:layout_marginLeft="5dp"/>
        <Button
            android:id="@+id/btnBruteForce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Brute Froce"
            android:layout_below="@id/etBudget"
            android:layout_toRightOf="@id/btnFastsolver"/>

        <TextView
            android:id="@+id/tRoute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_below="@id/btnFastsolver"
            android:text="Best Route:"
            android:textSize="20sp"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/tCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_below="@id/tRoute"
            android:text="Total Cost:"
            android:textSize="20sp"
            android:layout_marginLeft="10dp" />
        <TextView
            android:id="@+id/tTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_below="@id/tCost"
            android:text="Time Taken:"
            android:textSize="20sp"
            android:layout_marginLeft="10dp" />

    </RelativeLayout>
    </ScrollView>

</LinearLayout>
